--- a/tag.html
+++ b/tag.html
@@ -7,10 +7,7 @@
 </head>
 <body>
     <section>
-        <h1>Hola Que tal ?</h1>
-        <div>
-            <h2>Holi</h2>
-        </div>
+        <h1>Hola</h1>
     </section>
 </body>
 </html>
