--- a/index.html
+++ b/index.html
@@ -3,101 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Semana 2</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
+    <title>Semana 3</title>
 </head>
 <body>
     <main>
-        <section>
-            <h1>Pachaqtec</h1>
+       <div class="head1">
+        <section class="head">
+            <h1>PACHAQTEC</h1>
             <figure>
               <img src="images/image 1.png" alt="imagen">
             </figure>
-            <h2> Hola, Mi nombre es Mireya</h2>
+            <h2> Hola, mi nombre </h2>
+            <h3>es Mireya</h3>
         </section>
-        <section>
+        <section class="me">
           <h2> Sobre Mi</h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis diam commodo, arcu gravida erat quam donec convallis. Gravida arcu, suspendisse semper mauris tristique tortor. Eu, malesuada elit feugiat laoreet malesuada vitae. zz enim habitasse malesuada lacus, euismod pharetra habitasse. Lorem ipsum dolor s   
-          </p>
-          <button>Ver CV </button>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis diam commodo, arcu gravida erat quam donec convallis. Gravida arcu, suspendisse semper mauris tristique tortor. Eu, malesuada elit feugiat laoreet malesuada vitae. zz enim habitasse malesuada lacus, euismod pharetra habitasse. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis diam commodo, arcu gravida erat quam donec convallis. Gravida arcu, suspendisse semper mauris tristique tortor. Eu, malesuada elit feugiat laoreet malesuada vitae. zz enim habitasse malesuada lacus, euismod pharetra habitasse. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis diam commodo, arcu gravida erat quam donec convallis. Gravida arcu, suspendisse semper mauris tristique tortor. Eu, malesuada elit feugiat laoreet malesuada vitae. zz enim habitasse malesuada lacus, euismod pharetra habitasse.          </p>
+          <button  type="submit">Ver CV </button>
         </section>
-           <h3>SKILL</h3>
-                <div>
-                    <h4>html</h4>
-                </div>
-                <div>
-                    <h4>css</h4>
-                </div>
-                <div>
+        <section class="skill">
+            <h3>SKILL</h3>
+            <div class="rows">
+                    <div class="column">
+                        <h4>HTML</h4>
+                        <div class="bar">
+                        <div class="s-bar"></div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h4>CSS</h4>
+                        <div class="bar">
+                            <div class="s-bar"></div>
+                        </div>
+                    </div>
+            </div>
+            <div class="rows">
+                <div class="column">
                     <h4>Javascript</h4>
+                    <div class="bar">
+                        <div class="s-bar"></div>
+                    </div>
                 </div>
-                <div>
+                <div class="column">
                     <h4>Vue</h4>
+                    <div class="bar">
+                        <div class="s-bar"></div>
+                    </div>
                 </div>
-                <div>
+            </div>
+            <div class="rows">
+                <div class="column">
                     <h4>Flexbox</h4>
+                    <div class="bar">
+                        <div class="s-bar"></div>
+                    </div>
                 </div>
-                <div>
+                <div class="column">
                     <h4>Css Grid</h4>
+                    <div class="bar">
+                        <div class="s-bar"></div>
+                    </div>
                 </div>
-        <section>
-           <h3>Portafolio</h3>
-                <div>
-                    <img src="images/y1.png" alt="">
-                </div>
-                <div>
-                    <img src="images/y2.png" alt="">
-                </div>
-                <div>
-                    <img src="images/y3.png" alt="">
-                </div>
-                <div>
-                    <img src="images/y4.png" alt="">
-                </div>
-                <div>
-                    <img src="images/y5.png" alt="">
-                </div>
-                <div>
-                    <img src="images/y6.png" alt="">
-                </div>
-                <div>
-                    <img src="images/y7.png" alt="">
-                </div>
-                <div>
-                    <img src="images/y8.png" alt="">
-                </div>
-
+            </div>
+                 
         </section>
-        <section>
+        <section class="portafolio">
+           <br>
+           <h3>Portafolio</h3>
+            <br>
+                <div class="column">
+                  <figure><img src="images/y1.png" alt=""></figure>
+                  <figure><img src="images/y2.png" alt=""></figure>
+                  <figure><img src="images/y3.png" alt=""></figure>
+                  <figure><img src="images/y4.png" alt=""></figure>
+                </div>
+                <div>
+                    <figure> <img src="images/y5.png" alt=""></figure>
+                    <figure> <img src="images/y6.png" alt=""></figure>
+                    <figure><img src="images/y7.png" alt=""></figure>
+                    <figure> <img src="images/y8.png" alt=""></figure>
+                </div>
+        </section>
+        <section class="customer">
             <h3>Clientes</h3>
+            <br>
             <div>
                 <img src="images/r1.png" alt="">
-            </div>
-            <div>
                 <img src="images/ri2.png" alt="">
-            </div>
-            <div>
                 <img src="images/ri3.png" alt="">
-            </div>
-            <div>
                 <img src="images/ri4.png" alt="">
             </div>
         </section>
-        <section>
+        <section class=" contac">
+            <br>
             <form>
                 <h3>Contacto</h3>
-                <input type="text" placeholder="Nombre">
-                <input type="text" placeholder="Apellido">
-                <br>
-                <input type="email" placeholder="Correo">
-                <input type="number" placeholder="telefono">
-                <br>
-                <textarea name="Descripcion" id="" cols="30" rows="10" placeholder="descripcion"></textarea>
-                <br>
+                <div>
+                    <input required type="text" placeholder="Nombre">
+                    <input required type="text" placeholder="Apellido">
+                </div>
+                <div>
+                    <input required type="email" placeholder="Correo">
+                    <input required type="number" placeholder="telefono">
+                </div>
+                <div>
+                    <textarea  required name="Descripcion" id="" cols="30" rows="10" placeholder="descripcion"></textarea>
+                </div>
                 <input type="button" value="enviar">
 
             </form>
         </section>
+       </div>
      
     </main>
 </body>
