--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
                 <div>
                     <textarea  required name="Descripcion" id="" cols="30" rows="10" placeholder="descripcion"></textarea>
                 </div>
-                <input type="button" value="enviar">
+                <button type="submit">Enviar</button>
+                
 
             </form>
         </section>
